# docs/swagger.yaml
@@ -364,6 +364,33 @@ paths:
       summary: Assign a guest to a table
       tags:
       - guests
+  /guests/tickets/{id}:
+    get:
+      description: Returns a list of tickets per guest
+      parameters:
+      - description: Guest ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/types.Guest'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/types.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Get all tickets per guest
+      tags:
+      - guests
   /guests/unassign/{id}:
     patch:
       consumes:
